--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
             <version>364</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -51,7 +51,7 @@
             <artifactId>surefire-junit-platform</artifactId>
             <version>3.0.0-M5</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
     </dependencies>
     <!-- Skipping git plugin -->
     <build>
@@ -75,7 +75,7 @@
                     </archive>
                 </configuration>
             </plugin>
-            <plugin>
+            <!--<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
@@ -86,7 +86,7 @@
                         <version>3.0.0-M5</version>
                     </dependency>
                 </dependencies>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
 </project>
